--- a/package.json
+++ b/package.json
@@ -11,10 +11,22 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.3"
+    "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
+    "react-visibility-sensor": "^5.1.1",
+    "recharts": "^2.15.2",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
