Hopefully final Deployment change

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "spendly",
-    "homepage": "https://www.diljits.com",
+    "homepage": "https://www.diljits.com/Spendly",
     "private": true,
     "version": "0.0.0",
     "type": "module",
