--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "spendly",
     "homepage": "https://www.diljits.com/Spendly",
-    "private": true,
+    "private": false,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
